fix header shift by forcing scrollbar always visible

--- a/style.css
+++ b/style.css
@@ -36,7 +36,11 @@
     box-sizing: border-box;
 }
 
-html,
+html {
+    height: 100%;
+    overflow-y: scroll;
+}
+
 body {
     height: 100%;
 }
